--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ DATABASE_URL=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
+# Next Auth Auth0 Provider
 AUTH0_CLIENT_ID=""
 AUTH0_CLIENT_SECRET=""
 AUTH0_ISSUER=""
