--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/next": "^10.38.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "dayjs": "^1.11.9",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
