--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
@@ -41,6 +42,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.2",
     "@types/jest": "^29.5.4",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^18.17.12",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
