--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
