--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest ./__tests__ --watch"
-  },
-  "prisma": {
+    "test": "jest ./__tests__ --watch",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
