--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
+    "@mui/x-date-pickers": "^6.15.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@t3-oss/env-nextjs": "^0.6.1",
@@ -31,6 +32,7 @@
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form-mui": "^6.5.2",
     "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.2",
