--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form-mui": "^6.5.2",
+    "react-hook-form": "^7.46.2",
     "react-infinite-scroll-component": "^6.1.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.2",
