--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest ./__tests__ --watch",
+    "test": "jest ./__tests__ --ci",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -53,6 +59,7 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
+    "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "next-router-mock": "^0.9.9",
