--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "start": "next start",
     "test": "jest ./__tests__ --ci",
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -59,7 +60,7 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "eslint-config-next": "^13.4.19",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "next-router-mock": "^0.9.9",
