--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "test": "jest ./__tests__ --ci",
+    "test": "jest ./__tests__ --watch",
+    "commit_test": "jest ./__tests__ --ci",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
     "prepare": "husky install"
   },
