--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
+    "@mui/x-charts": "^6.18.2",
     "@mui/x-date-pickers": "^6.15.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
