--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest ./__tests__ --watch",
     "commit_test": "jest ./__tests__ --ci",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db": "bash deploy-db.sh"
   },
   "husky": {
     "hooks": {
