--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 version: '3.8'
-
-networks:
-  default:
-
 services:
-  mysql-db:
-    container_name: mysql-db
-    image: mysql:5.7
+  db:
+    container_name: db
+    image: mysql:8
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     env_file: ./.env
@@ -19,28 +15,20 @@ services:
       - $MYSQL_PORT:3306
     volumes:
       - mysql-volume:/var/lib/mysql
-    networks:
-      - default
 
-  # nextjs-app:
-  #   container_name: nextjs-app
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   restart: unless-stopped
-  #   env_file: ./.env
-  #   ports:
-  #       - 8084:80
-  #   expose:
-  #       - "8084"
-  #   stdin_open: true
-  #   tty: true
-  #   volumes:
-  #     - ./nextjs-app:/app
-  #     - /app/node_modules
-  #     - /app/.next
-  #   networks:
-  #     - default
+  nextjs-app:
+    container_name: nextjs-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    env_file: ./.env
+    ports:
+        - 3000:3000
+    expose:
+        - "3000"
+    depends_on:
+      - db
 
 volumes: 
   mysql-volume:
