--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "commit_test": "jest ./__tests__ --ci",
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
     "prepare": "husky install",
-    "db": "bash deploy-db.sh"
+    "db": "docker-compose up db -d",
+    "docker": "docker-compose up -d --build --force-recreate"
   },
   "husky": {
     "hooks": {
