--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.21",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
