--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=""
+# NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Auth0 Provider
