--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@trpc/next": "^10.38.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "next": "^13.4.19",
