--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,6 @@ MYSQL_USER=""
 MYSQL_PASSWORD=""
 MYSQL_DATABASE=""
 MYSQL_PORT=""
+MYSQL_HOST=""
 
-DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost:${MYSQL_PORT}/${MYSQL_DATABASE}
+DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
