--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "test": "jest ./__tests__ --watch",
     "commit_test": "jest ./__tests__ --ci",
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "seed": "tsx prisma/seed.ts",
     "prepare": "husky install",
     "db": "docker-compose up db -d",
     "docker": "docker-compose up -d --build --force-recreate"
@@ -53,6 +53,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.44.2",
@@ -75,6 +76,7 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
+    "tsx": "^4.11.0",
     "typescript": "^5.2.2"
   },
   "ct3aMetadata": {
