--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
+PORT=3000
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=""
-# NEXTAUTH_URL_INTERNAL="http://localhost:3000"
-NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL_INTERNAL=http://localhost:${PORT}
+NEXTAUTH_URL=http://localhost:${PORT}
 
 # Next Auth Auth0 Provider
 AUTH0_CLIENT_ID=""
