--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
             # Install dependencies and run tests
             npm install
-            npm commit_test
+            npm run commit_test
             echo 'Tests passed'
 
             # Build and run the Docker container
